smug: Fix pure KF5 build

--- a/smug/CMakeLists.txt
+++ b/smug/CMakeLists.txt
@@ -25,7 +25,8 @@ target_link_libraries(kipiplugin_smug
                       KF5::KExiv2
                       KF5::KDcraw
                       KF5::KIOCore
-                      
+                      KF5::WindowSystem
+
                       KF5kipiplugins
                      )
 
