advancedslideshow: Fix pure KF5 build

--- a/advancedslideshow/CMakeLists.txt
+++ b/advancedslideshow/CMakeLists.txt
@@ -52,6 +52,8 @@ add_library(kipiplugin_advancedslideshow MODULE ${kipiplugin_advancedslideshow_P
 target_link_libraries(kipiplugin_advancedslideshow
                       PRIVATE
                       KF5::Parts
+                      KF5::WidgetsAddons
+                      KF5::IconThemes
 
                       Qt5::OpenGL
                       Qt5::Svg
