Factorization of Yandex Fotki Widgets using KPSettingsWidget.

--- a/yandexfotki/CMakeLists.txt
+++ b/yandexfotki/CMakeLists.txt
@@ -10,6 +10,7 @@ add_definitions(-DTRANSLATION_DOMAIN=\"kipiplugin_yandexfotki\")
 
 set(kipiplugin_yandexfotki_PART_SRCS
     plugin_yandexfotki.cpp
+    yfwidget.cpp
     yfalbum.cpp
     yfphoto.cpp
     yftalker.cpp
