Depend on KF5::IconThemes (required by expoblending)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -107,6 +107,7 @@ find_package(KF5 REQUIRED COMPONENTS
              I18n
              Archive
              KIO
+             IconThemes
              OPTIONAL_COMPONENTS CalendarCore # for Calendar
 )
 
