libkipiplugins don't need widgetaddons add specific widgetaddons link to plugins which still use KMessageBox FaceBook tool : KMessageBox -> QMessageBox

--- a/imgur/CMakeLists.txt
+++ b/imgur/CMakeLists.txt
@@ -31,6 +31,7 @@ target_link_libraries(kipiplugin_imgur
         KF5::KExiv2
         KF5::Kipi
         KF5::KIOCore
+        KF5::WidgetsAddons
         KF5::WindowSystem
 )
 
