--- a/imageshack/CMakeLists.txt
+++ b/imageshack/CMakeLists.txt
@@ -26,7 +26,7 @@ target_link_libraries(kipiplugin_imageshack
                       KF5::Kipi
                       KF5::KExiv2
                       KF5::KIOCore
-
+                      KF5::WidgetsAddons
                       KF5kipiplugins
                      )
 
