--- a/piwigo/CMakeLists.txt
+++ b/piwigo/CMakeLists.txt
@@ -24,7 +24,7 @@ target_link_libraries(kipiplugin_piwigo
                       KF5::Kipi
                       KF5::KExiv2
                       KF5::KIOCore
-
+                      KF5::WidgetsAddons
                       KF5kipiplugins
                      )
 
