--- a/printimages/CMakeLists.txt
+++ b/printimages/CMakeLists.txt
@@ -48,6 +48,7 @@ target_link_libraries(kipiplugin_printimages
                       KF5::Kipi
                       KF5::KDcraw
                       KF5::KExiv2
+                      KF5::WidgetsAddons
                       KF5kipiplugins
                      )
 
