--- a/sendimages/CMakeLists.txt
+++ b/sendimages/CMakeLists.txt
@@ -19,7 +19,7 @@ add_library(kipiplugin_sendimages MODULE ${kipiplugin_sendimages_PART_SRCS})
 target_link_libraries(kipiplugin_sendimages
                       PRIVATE
                       KF5::Parts
-                      KF5::WidgetsAddons
+                      KF5::Service
                       KF5::KDcraw
                       KF5::Kipi
                       KF5::KExiv2
