drop CoreAddons dependencies in each plugins. add KF5 depenedencies for each plugins which need it.

--- a/advancedslideshow/CMakeLists.txt
+++ b/advancedslideshow/CMakeLists.txt
@@ -59,6 +59,7 @@ target_link_libraries(kipiplugin_advancedslideshow
                       KF5::KExiv2
                       KF5::KDcraw
                       KF5::Parts
+                      KF5::KIOFileWidgets
                       KF5kipiplugins
 
                       ${OPENGL_LIBRARIES}
