--- a/piwigo/CMakeLists.txt
+++ b/piwigo/CMakeLists.txt
@@ -24,6 +24,7 @@ target_link_libraries(kipiplugin_piwigo
                       KF5::Kipi
                       KF5::KExiv2
                       KF5::KIOCore
+                      KF5::KIOFileWidgets 
                       KF5kipiplugins
                      )
 
