--- a/yandexfotki/CMakeLists.txt
+++ b/yandexfotki/CMakeLists.txt
@@ -28,6 +28,7 @@ target_link_libraries(kipiplugin_yandexfotki
         KF5::Kipi
         KF5::KExiv2
         KF5::KIOCore
+        KF5::KIOFileWidgets
         KF5::WindowSystem
         KF5kipiplugins
 )
