--- a/facebook/CMakeLists.txt
+++ b/facebook/CMakeLists.txt
@@ -26,7 +26,7 @@ target_link_libraries(kipiplugin_facebook
                       KF5::KExiv2
                       KF5::KDcraw
                       KF5::KIOCore
-                      KF5::CoreAddons
+                      KF5::KIOWidgets
                       KF5::WindowSystem
                      )
 
