--- a/flickr/CMakeLists.txt
+++ b/flickr/CMakeLists.txt
@@ -31,6 +31,7 @@ target_link_libraries(kipiplugin_flickr
                       KF5::KExiv2
                       KF5::KDcraw
                       KF5::KIOCore
+                      KF5::KIOWidgets
                       KF5::WindowSystem
                      )
 
