--- a/tests/imageselector/CMakeLists.txt
+++ b/tests/imageselector/CMakeLists.txt
@@ -1,5 +1,5 @@
 #
-# Copyright (c) 2010-2014, Gilles Caulier, <caulier dot gilles at gmail dot com>
+# Copyright (c) 2010-2015, Gilles Caulier, <caulier dot gilles at gmail dot com>
 #
 # Redistribution and use is allowed according to the terms of the BSD license.
 # For details see the accompanying COPYING-CMAKE-SCRIPTS file.
@@ -16,9 +16,8 @@ target_link_libraries(imageselector
                       Qt5::Gui
                       Qt5::Core
 
-                      ${KF5Kipi_LIBRARIES}
-                      ${KF5KExiv2_LIBRARIES}
-                      ${KF5KDcraw_LIBRARIES}
+                      KF5::Kipi
+                      KF5::KExiv2
 
                       KF5kipiplugins
 )
