fix compilation when imgur tool use kQOAuth library

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -90,6 +90,7 @@ find_package(Qt5 ${REQUIRED_QT_VERSION} REQUIRED NO_MODULE COMPONENTS
              Svg
              Concurrent
              WebKitWidgets
+             Network
              OPTIONAL_COMPONENTS OpenGL
 )
 
